dark mode solved, squares ctn with info set to color primary

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ h1 {
 
 h2 {
   font-size: var(--font-size-h2);
+  color: var(--color-headline);
   margin: 0;
   font-weight: 600;
 }
