--- a/src/styles/homePage.module.css
+++ b/src/styles/homePage.module.css
@@ -45,7 +45,7 @@
     align-items: center;
     margin-bottom:1em;
     border-radius: 10px;
-    background: var(--color-background);
+    background: var(--color-primary);
 }
 
 img{
@@ -77,7 +77,7 @@ img{
 .servicesCtn{
     width:100%;
     height: 250px;
-    background: var(--color-background);
+    background: var(--color-primary);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
