--- a/src/styles/legal.module.css
+++ b/src/styles/legal.module.css
@@ -7,11 +7,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background: var(--color-background);
    /* background: linear-gradient(135deg, #3498db, #9b59b6); */
 }
 
-.legalHeroCtn h1,
-.legalHeroCtn span{
+.legalHeroCtn h1{
     /* color: var(--color-primary); */
     color: var(--color-headline);
 }
@@ -28,6 +28,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 2em;
+    background: var(--color-background);
 }
 
 .solutionCtn{
